   
===========
Changes log  
===========

- @version-full@ (@release-date@)
    - Bug fixed
       - Fixed sharing of ClientResource context with the underlying connector, 
         when this ClientResource is used outside a Component.
       - Reduced the number of iterators created when internal NIO connector is 
         idle. Reported by Yan Zhou 
       - Fixed incomplete support for enabling and disabling cipher suites.
         Reported by Enoch Stephen, Jim Zuber and Andreas Schnabl.
       - Reduced CPU consumption of internal NIO/HTTP connector by using proper
         NIO selector wakeup logic instead of constant looping.
    - API changes
       - Renamed Directory#setAlphaComparator and setAlphaNumComparator
         methods into useAlphaComparator and useAlphaNumComparator with
         proper deprecation. Suggested by Tim Peierls.
       - Added getJsonArray, getJsonBoolean, getJsonNull and getJsonString 
         methods to JsonRepresentation in the GWT edition.
    - Misc
       - Reverted Role equality test to default Java object equality as
         equality based on name could cause issues with MemoryRealm
         mapping if several applications used the same role names.
       - Upgraded Jetty to version 7.6.5.
       - Upgraded Jackson to version 1.9.8.

- 2.1 Release Candidate 5 (05/23/2012)
    - Bug fixed
       - Fixed issue with OutputRepresentation retrieved as InputStream
         using its getStream() method when writing negative integers.
         Now properly shift values into the 0-255 ranges, leaving the -1
         value as a clear marker for end of file.
         Reported by Gabriel Pulido and Marc Knaup.
       - Fixed user agent parsing for Chrome and Safari.
       - Usage of ranges on representations having unknown size.
         Reported by Bjorn Roche.
       - Internal connector now closes entity stream/channel upon 
         completion. Suggested by Arjohn Kampman